PROJECT(CommonBase)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_BUILD_TYPE "Debug")
INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(../External/jemalloc)
AUX_SOURCE_DIRECTORY(. SRC_DIR)
LINK_DIRECTORIES(/usr/local/lib)
MESSAGE(${PROJECT_SOURCE_DIR})
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -DNDEBUG -O2 -g -Wall")
ADD_COMPILE_OPTIONS(-std=c++11)
ADD_LIBRARY(CommonBase STATIC ${SRC_DIR})
INSTALL(TARGETS CommonBase DESTINATION ${PROJECT_SOURCE_DIR}/../lib PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE)


